# sinicaphak_0709test

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
inc/: broadcast_thread.h  cqueue.h  init.h  log.h  main.h  main_thread.h  read_config.h  receive_thread.h  save_print.h  udp_socket.h  ui.h
output/: config.json  main
output/user_aaa/: config.json  main
output/user_bbb/: config.json  main
src/: CMakeLists.txt  broadcast_thread.c  init.c  main.c  main_thread.c  receive_thread.c  udp_socket.c  ui.c
src/tool/: CMakeLists.txt  read_config.c  save_print.c
temp_tool/: compile_tool.sh
test/: CMakeLists.txt  hello_test.cpp
项目文档/测试报告/: 黑盒测试报告v1.docx
项目文档/设计报告/: 软件设计文档v1.doc
项目文档/设计报告/设计图/: 两种模式状态图.puml  发送聊天记录状态图.puml
